appId: com.clubedojogo.mobile.dev
---
- stopApp
- launchApp
- extendedWaitUntil:
    visible: Perfil(, tab, 5 of 5)?
    timeout: 30000
- tapOn: Perfil(, tab, 5 of 5)?
- tapOn: Abrir configurações
- scrollUntilVisible:
    element:
      id: settings-theme-cosmic-campfire
    direction: DOWN
    waitToSettleTimeoutMs: 500
    timeout: 60000
- tapOn:
    id: settings-theme-cosmic-campfire
    enabled: true
- scrollUntilVisible:
    element:
      id: settings-audio
    direction: DOWN
    waitToSettleTimeoutMs: 500
    timeout: 60000
    centerElement: true
- assertVisible:
    id: settings-audio
    checked: false
- tapOn:
    id: settings-audio
- assertVisible:
    id: settings-audio
    checked: true
- takeScreenshot: audio-habilitado
